examples/type_system/failing/140_recursive_self_reference_return_precision.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn countdown(n) {
    if n == 0 {
        0
    } else {
        countdown(n - 1)
    }
}

fn main() -> Unit {
    let value: String = countdown(2)
}
